--- a/WooCommerce/Classes/ViewRelated/Orders/AddTrackingViewController.xib
+++ b/WooCommerce/Classes/ViewRelated/Orders/AddTrackingViewController.xib
@@ -22,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="7jr-lt-rR6">
-                    <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                 </tableView>
             </subviews>
@@ -31,7 +31,7 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="7jr-lt-rR6" secondAttribute="bottom" id="Dus-bb-39H"/>
                 <constraint firstItem="7jr-lt-rR6" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Mw5-DI-QoY"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="7jr-lt-rR6" secondAttribute="trailing" id="Vsw-rA-wO7"/>
-                <constraint firstItem="7jr-lt-rR6" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="44" id="w5J-UR-Zr2"/>
+                <constraint firstItem="7jr-lt-rR6" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="w5J-UR-Zr2"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="138.40000000000001" y="106.59670164917542"/>
