--- a/WooCommerce/Classes/ViewRelated/Orders/ShippingProvidersViewController.xib
+++ b/WooCommerce/Classes/ViewRelated/Orders/ShippingProvidersViewController.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShippingProvidersViewController" customModule="WooCommerce" customModuleProvider="target">
             <connections>
-                <outlet property="searchDisplayController" destination="wql-8p-eLN" id="r1r-ut-bNr"/>
+                <outlet property="table" destination="P6D-tp-hso" id="SX2-kH-gLr"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -21,28 +21,20 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="k6y-bh-neI">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="P6D-tp-hso">
                     <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="k6y-bh-neI" secondAttribute="trailing" id="2kI-I9-RmY"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="k6y-bh-neI" secondAttribute="bottom" id="7j4-Sp-YJa"/>
-                <constraint firstItem="k6y-bh-neI" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Rwn-1C-GMa"/>
-                <constraint firstItem="k6y-bh-neI" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="gkM-9T-Egu"/>
+                <constraint firstItem="P6D-tp-hso" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="OM8-Ty-hkD"/>
+                <constraint firstItem="P6D-tp-hso" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="R78-1a-z0G"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="P6D-tp-hso" secondAttribute="trailing" id="fpN-8r-Hel"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="P6D-tp-hso" secondAttribute="bottom" id="iaP-z0-dP1"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="53.600000000000001" y="82.3088455772114"/>
         </view>
-        <searchDisplayController id="wql-8p-eLN">
-            <connections>
-                <outlet property="delegate" destination="-1" id="2Cr-3a-MvZ"/>
-                <outlet property="searchContentsController" destination="-1" id="8Ap-cF-p9p"/>
-                <outlet property="searchResultsDataSource" destination="-1" id="cCd-Lh-CoN"/>
-                <outlet property="searchResultsDelegate" destination="-1" id="uZN-ak-f2n"/>
-            </connections>
-        </searchDisplayController>
     </objects>
 </document>
