--- a/WooCommerce/Classes/ViewRelated/Products/Cells/ProductReviewsTableViewCell.xib
+++ b/WooCommerce/Classes/ViewRelated/Products/Cells/ProductReviewsTableViewCell.xib
@@ -21,30 +21,30 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="3X1-Tq-m8c">
-                        <rect key="frame" x="16" y="15" width="296" height="14"/>
+                        <rect key="frame" x="16" y="11" width="288" height="22"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vqh-zX-MRV">
-                                <rect key="frame" x="0.0" y="0.0" width="63" height="14"/>
+                                <rect key="frame" x="0.0" y="0.0" width="63" height="22"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="fO6-L6-6dK" userLabel="Spacer">
-                                <rect key="frame" x="71" y="0.0" width="109.5" height="14"/>
+                                <rect key="frame" x="71" y="0.0" width="71.5" height="22"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="260" verticalHuggingPriority="260" text="20k" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CZP-oo-f9a">
-                                <rect key="frame" x="188.5" y="0.0" width="29.5" height="14"/>
+                                <rect key="frame" x="150.5" y="0.0" width="29.5" height="22"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" horizontalHuggingPriority="260" verticalHuggingPriority="260" translatesAutoresizingMaskIntoConstraints="NO" id="8uK-v8-jD2" userLabel="Star View" customClass="RatingView" customModule="WooCommerce" customModuleProvider="target">
-                                <rect key="frame" x="226" y="0.0" width="70" height="14"/>
+                                <rect key="frame" x="188" y="0.0" width="100" height="22"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="14" id="BQT-I1-qKW"/>
-                                    <constraint firstAttribute="width" constant="70" id="pDH-Qa-WoB"/>
+                                    <constraint firstAttribute="height" constant="22" id="BQT-I1-qKW"/>
+                                    <constraint firstAttribute="width" constant="100" id="pDH-Qa-WoB"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -63,8 +63,8 @@
                     </stackView>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailingMargin" secondItem="3X1-Tq-m8c" secondAttribute="trailing" id="9w3-h1-wXn"/>
                     <constraint firstItem="3X1-Tq-m8c" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="PY0-JL-OpD"/>
-                    <constraint firstAttribute="trailing" secondItem="3X1-Tq-m8c" secondAttribute="trailing" constant="8" id="SRN-3q-qp0"/>
                     <constraint firstItem="3X1-Tq-m8c" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="pAb-ya-dvK"/>
                 </constraints>
             </tableViewCellContentView>
